--- a/front-end/src/assets/css/style.css
+++ b/front-end/src/assets/css/style.css
@@ -14,16 +14,35 @@
     justify-content: center;
 }
 
+.agg .contract .stage {
+    margin-right: 20px;
+    font-style: italic;
+    font-size: 2rem;
+    font-weight: 700;
+    align-self: center;
+}
+
 .agg .contract .item {
     display: flex;
     display: -webkit-flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     margin-bottom: 15px;
 }
 
 .agg .contract .item .label {
     margin-right: 100px;
     font-style: italic;
+}
+
+.agg .solicitInfo {
+    display: flex;
+    display: -webkit-flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+.agg .solicitInfo .item {
+    font-weight: 700;
 }
 
 .agg .contract .item .value {
