--- a/front-end/src/assets/css/style.css
+++ b/front-end/src/assets/css/style.css
@@ -3,8 +3,29 @@
     font-family: sans serif;
 }
 
+.agg .container {
+    display: -webkit-flex;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.agg .contract .role {
+    margin-bottom: 50px;
+}
+
 .agg .waiting {
     font-size: 1.5rem;
+}
+
+.agg .admin {
+    display: flex;
+    display: -webkit-flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: flex-start;
 }
 
 .agg .display {
@@ -12,6 +33,39 @@
     display: flex;
     display: -webkit-flex;
     justify-content: center;
+}
+
+.agg .adminStage {
+    display: flex;
+    display: -webkit-flex;
+    flex-direction: column;
+}
+
+.agg .adminStage .stageForm {
+    display: flex;
+    display: -webkit-flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
+.agg .adminStage .stageContent {
+    margin-top: 50px;
+    font-size: 1.2rem;
+}
+
+.agg .adminStage .stageForm .label {
+    font-size: 1.5rem;
+    margin-right: 30px;
+}
+
+.agg .adminStage .stageForm .value {
+    font-style: italic;
+    font-weight: 700;
+    font-size: 3.0rem;
+    font-family: sans serif;
 }
 
 .agg .contract .stage {
@@ -62,6 +116,8 @@
     /*justify-content: center;*/
     /*align-items: flex-start;*/
     width: 400px;
+    margin-bottom: 50px;
+    margin-top: 50px;
 }
 
 .agg .contract .icon {
@@ -70,6 +126,7 @@
 }
 
 .form {
+    margin-bottom: 20px;
     display: flex;
     display: -webkit-flex;
     flex-direction: row;
@@ -99,6 +156,10 @@
     padding: 0 15px;
     transition: border-color .2s cubic-bezier(.645, .045, .355, 1);
     margin-right:10px ;
+}
+
+.formLists {
+    margin-top: 30px;
 }
 
 .btn-dark {
@@ -135,4 +196,25 @@ button[disabled]{
     border: 1px solid #999999;
     background-color: #cccccc;
     color: #666666;
+}
+
+.row {
+    display: flex;
+    display: -webkit-flex;
+    flex-direction: row;
+}
+
+.col {
+    display: flex;
+    display: -webkit-flex;
+    flex-direction: column;
+}
+
+.agg .contract .buttonGroup {
+    align-items: flex-end;
+    margin-top: 40px;
+}
+
+.contract .contract-button {
+    width: 100px;
 }
