--- a/front-end/src/assets/css/style.css
+++ b/front-end/src/assets/css/style.css
@@ -214,7 +214,8 @@ button[disabled]{
 
 .agg .contract .buttonGroup {
     align-items: flex-end;
-    margin-top: 40px;
+    width: 100%;
+    height: 100%;
 }
 
 .contract-button {
@@ -223,4 +224,26 @@ button[disabled]{
 
 .walletWaiting {
     align-self: center;
+}
+
+.agg .graphLayout {
+    display: flex;
+    display: -webkit-flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    height: 800px;
+}
+
+.agg .graphLayout .graph {
+    align-self: center;
+}
+
+.agg .graphLayout .info {
+    width: 500px;
+    font-size:1.3rem;
+}
+
+.agg .graphLayout .back {
+    margin-top: 50px;
 }
