--- a/front-end/src/assets/css/style.css
+++ b/front-end/src/assets/css/style.css
@@ -268,6 +268,7 @@ button[disabled]{
 
 .preLoading .pacman{
     margin-left: 20px;
+    align-self: center;
 }
 
 .preLoading .loading {
@@ -277,6 +278,10 @@ button[disabled]{
     display: flex;
     display: -webkit-flex;
     align-items: center;
+}
+
+.preLoading .networkDescription {
+    margin-bottom: 20px;
 }
 
 .agg .formNote {
